--- a/new_gui.ui
+++ b/new_gui.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Cannonball trajectory simulation</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="cannon_plot" name="cannon_plot" native="true">
@@ -80,7 +80,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>phi</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLineEdit" name="initial_velocity">
@@ -93,7 +93,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>vo</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLineEdit" name="mass">
@@ -106,7 +106,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>m</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLineEdit" name="air_resistance">
@@ -119,7 +119,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>b</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="label">
@@ -179,7 +179,7 @@
      <rect>
       <x>60</x>
       <y>270</y>
-      <width>141</width>
+      <width>161</width>
       <height>31</height>
      </rect>
     </property>
@@ -192,7 +192,7 @@
      <rect>
       <x>60</x>
       <y>300</y>
-      <width>141</width>
+      <width>171</width>
       <height>31</height>
      </rect>
     </property>
@@ -205,7 +205,7 @@
      <rect>
       <x>60</x>
       <y>330</y>
-      <width>141</width>
+      <width>171</width>
       <height>31</height>
      </rect>
     </property>
@@ -218,12 +218,12 @@
      <rect>
       <x>60</x>
       <y>360</y>
-      <width>141</width>
+      <width>171</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Max Height:</string>
+     <string>Max Height and time:</string>
     </property>
    </widget>
   </widget>
